--- a/cocktail-encyclo/src/App.css
+++ b/cocktail-encyclo/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-image: url('https://i.pinimg.com/originals/2e/c7/b3/2ec7b332fd6ad908ff4933fa4a8ac04c.jpg');
+  background-size: 100vw 100vh;
 }
 
 .App-logo {
