--- a/cocktail-encyclo/src/drinkCont/drinkCont.css
+++ b/cocktail-encyclo/src/drinkCont/drinkCont.css
@@ -1,11 +1,13 @@
 .ogdrink{
     width: 20vw;
+    background-color: rgba(0, 0, 0, 0.8);
+    margin: 3vw;
 }
 .ogdrink img{
     width: 20vw;
 }
 .index{
-    display: grid;
-    grid-template-columns: 50vw 50vw;
-    justify-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
