--- a/cocktail-encyclo/src/drinkCont/indiDrink/indiDrink.css
+++ b/cocktail-encyclo/src/drinkCont/indiDrink/indiDrink.css
@@ -1,7 +1,7 @@
 .eachDrink img {
     width: 18vw;
     border-radius: 50%;
-    height: auto;
+    
 }
 .eachDrink{
     display: flex;
@@ -12,6 +12,7 @@
     background-color: tan;
     text-align: center;
     border-radius: 13px;
+    min-height: 100vh;
 }
 .indiDrink{
     width: 80vw;
