--- a/cocktail-encyclo/src/drinkCont/drinkCont.css
+++ b/cocktail-encyclo/src/drinkCont/drinkCont.css
@@ -2,6 +2,7 @@
     width: 20vw;
     background-color: rgba(0, 0, 0, 0.8);
     margin: 3vw;
+    color: azure;
 }
 .ogdrink img{
     width: 20vw;
